--- a/Girish/L1.html
+++ b/Girish/L1.html
@@ -22,7 +22,7 @@
     <div id="p-1">
 
         <p id="infant-1">
-            programming is like any other sport. you might know the rules but you have to play to learns
+            programming is like any other sport. you might know the rules but you have to play to learn.<br><br>-zukerberg
         </p>
 
         <img id="infant-2"
@@ -36,8 +36,10 @@
 
         <p id="child-2">if you don't like your destiny, don't accept it. instead, have the courage to change
             it the
-            way you want it
-            to be</p>
+            way you want it to be.
+            <br><br>
+            --Uzumaki Naruto
+        </p>
     </div>
     <footer>
         <h1><b> Footer</b></h1>
