--- a/Girish/L1.html
+++ b/Girish/L1.html
@@ -15,7 +15,7 @@
     <header>
         <img id="first" src="images/down-arrow.png" alt="" />
         <h1 id="heading">HustleBee</h1>
-        <img id="second" src="images/close.png" alt="" />
+        <img id="second" src="images/1.png" alt="" />
     </header>
 
 
